# ripVID

./: .env.example  .gitignore  AUDIT_FIXES_COMPLETE.md  BEAUTIFUL_UI_FIXED.md  BUILD_EXE.bat  DARK_MINIMAL_UI.md  DELIVERABLES.md  IMPLEMENTATION_SUMMARY.md  LICENSE  QUICK_START.md  README.md  REFACTORING_NOTES.md  RIPVID_COMPLETE.md  RUN_APP.bat  SECURITY_FIXES.md  SECURITY_IMPLEMENTATION_SUMMARY.md  STATUS_100_PERCENT.md  TERMS.md  check-browsers.ps1  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/: changelog-config.json
.github/workflows/: desktop-release.yml  release.yml
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  LICENSE.txt  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: binary_manager.rs  download.rs  errors.rs  logging.rs  main.rs  validation.rs  ytdlp_updater.rs
src/components/: ErrorBoundary.css  ErrorBoundary.tsx  ShaderBackground.css  ShaderBackground.tsx  TermsAcceptance.css  TermsAcceptance.tsx  TitleBar.css  TitleBar.tsx  UpdateChecker.tsx
src/components/ui/: progress.tsx
src/shaders/: background.frag  backgroundShader.ts
src/types/: index.ts
