[package]
name = "video-downloader"
version = "1.0.0"
description = "A high-quality video downloader for YouTube and X"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.60"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
regex = "1"
tokio = { version = "1", features = ["full"] }
trash = "3"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
