[package]
name = "video-downloader"
version = "1.0.0"
description = "A high-quality video downloader for YouTube and X"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.60"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
regex = "1"
tokio = { version = "1", features = ["full"] }
trash = "3"
reqwest = { version = "0.11", features = ["json"] }
# Security dependencies
url = "2.5"           # URL parsing and validation
dirs = "5.0"          # Safe home directory detection
sha2 = "0.10"         # SHA-256 checksum verification
hex = "0.4"           # Hex encoding for checksums
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "time", "json"] }
tracing-appender = "0.2"
uuid = { version = "1", features = ["v4"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
